Bug 156615 - A11Y sidebar: not clickable warning about empty table cells
Summary: A11Y sidebar: not clickable warning about empty table cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-04 18:01 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-10 08:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-04 18:01:50 UTC
attachment 188740 [details] has a table with several empty cells.
The accessibility sidebar gives a warning about this, but no hyperlink to highlight the issue.
Screenshot is attachment 188741 [details]

1. Open attached file
2. Open the Accessibility sidebar
3. Observe the warning "An input form is not interactive."
-> Should have a clickable link to highlight the table

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eff5a3fe98ca5d1d28c4f5386c4af8a3be8f5703
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-08-10 06:20:47 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d0268f5ae6061bc96c00481c9ef3547be300b5a

tdf#156615 - A11Y - fix not clickable warning about empty table cells

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-08-10 08:35:04 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/15f0871015b3d80cdf952f06891364f37adec90c

tdf#156615 - A11Y - fix not clickable warning about empty table cells

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.