tdf#156615 - A11Y - fix not clickable warning about empty table cells

Make "Empty table cells for formatting" warning clickable and go to the
table.

Change-Id: I65a258cd559b423692307af9bbbb778754076894
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155532
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>